package-origin i http://www.pardus-anka.org/ olarak değiştirildi

--- a/server/web/apache/files/webroot/index-de.html
+++ b/server/web/apache/files/webroot/index-de.html
@@ -24,7 +24,7 @@
 </center>
 
 
-<p>Sie haben erfolgreich den&nbsp;<a href="http://www.apache.org/foundation/preFAQ.html">Apache Webserver</a> in <a href="http://www.pardus.org.tr/eng">Pardus</a> installiert. Ab jetzt ist es m&ouml;glich lokale HTML Webseiten in dieses Verzeichnis hinzuzuf&uuml;gen.
+<p>Sie haben erfolgreich den&nbsp;<a href="http://www.apache.org/foundation/preFAQ.html">Apache Webserver</a> in <a href="http://www.pardus-anka.org">Pardus</a> installiert. Ab jetzt ist es m&ouml;glich lokale HTML Webseiten in dieses Verzeichnis hinzuzuf&uuml;gen.
 </p>
 
 
