--- a/server/web/apache/files/webroot/index-es.html
+++ b/server/web/apache/files/webroot/index-es.html
@@ -25,7 +25,7 @@
 
 
 <p>Se instal&oacute; exitosamente el 
-<a href="http://www.apache.org/foundation/preFAQ.html">servirod web Apache</a> en <a href="http://www.pardus.org.tr/eng">Pardus</a>. Ahora es posible agregar p&aacute;ginas&nbsp;HTML locales en este directorio.
+<a href="http://www.apache.org/foundation/preFAQ.html">servirod web Apache</a> en <a href="http://www.pardus-anka.org">Pardus</a>. Ahora es posible agregar p&aacute;ginas&nbsp;HTML locales en este directorio.
 </p>
 
 
