--- a/server/web/apache/files/webroot/index-ptbr.html
+++ b/server/web/apache/files/webroot/index-ptbr.html
@@ -22,7 +22,7 @@ no <a href="http://www.pardus.org.tr/eng">Pardus</a>. Agora é possível adicion
 
 <hr width="80%" size="4" />
 
-<p><a href="http://www.pardus.org.tr/eng">Pardus</a> é uma distribuição Linux livre para ser usada, modificada e distribuída na qual você pode executar o servidor web Apache de uma forma segura.
+<p><a href="http://www.pardus-anka.org">Pardus</a> é uma distribuição Linux livre para ser usada, modificada e distribuída na qual você pode executar o servidor web Apache de uma forma segura.
 Você pode usar o seguinte logo Apache enquanto o utilizar como servidor nas suas páginas web. Obrigado por utilizar o Pardus e o Apache! </p>
 
 <center><img src="apache_pb.gif" alt="Apache" /></center>
