--- a/server/web/apache/files/webroot/index-tr.html
+++ b/server/web/apache/files/webroot/index-tr.html
@@ -16,12 +16,12 @@
 </b><br>
 </center>
 
-<p>Bu sayfayı gördüğünüze göre <a href="http://www.pardus.org.tr">Pardus</a> üzerine <a
+<p>Bu sayfayı gördüğünüze göre <a href="http://www.pardus-anka.org">Pardus</a> üzerine <a
 href="http://www.apache.org/foundation/preFAQ.html">Apache Web Sunucusu</a>'nu başarılı bir şekilde kurdunuz demektir. Bu sayfanın bulunduğu dizine kendi sayfalarınızı ekleyip hemen yayımlamaya başlayabilirsiniz.</p>
 
 <hr width="80%" size="4" />
 
-<p><a href="http://www.pardus.org.tr">Pardus,</a> Apache Web Sunucusu'nun güvenli bir şekilde çalışabileceği özgür bir Linux dağıtımıdır.</p>
+<p><a href="http://www.pardus-anka.org">Pardus,</a> Apache Web Sunucusu'nun güvenli bir şekilde çalışabileceği özgür bir Linux dağıtımıdır.</p>
 <p>Apache Web Sunucusu'nu kullanırken aşağıdaki Apache logosunu kullanabilirsiniz. Pardus ve Apache'yi kullandığınız için teşekkür ederiz!</p>
 
 <center><img src="apache_pb.gif" alt="Apache" /></center>
