--- a/server/web/apache/files/webroot/index.html
+++ b/server/web/apache/files/webroot/index.html
@@ -18,12 +18,12 @@
 
 <p> You have successfully installed 
 <a href="http://www.apache.org/foundation/preFAQ.html">Apache web server</a>
-under <a href="http://www.pardus.org.tr/eng">Pardus</a>. Now it's possible to add HTML pages located in this directory.
+under <a href="http://www.pardus-anka.org">Pardus</a>. Now it's possible to add HTML pages located in this directory.
 </p>
 
 <hr width="80%" size="4" />
 
-<p><a href="http://www.pardus.org.tr/eng">Pardus,</a> is a free to use, modify and distribute Linux distribution on which you can run Apache web server in a secure manner.
+<p><a href="http://www.pardus-anka.org">Pardus,</a> is a free to use, modify and distribute Linux distribution on which you can run Apache web server in a secure manner.
 You can use the following Apache logo while using Apache web server in your web pages. Thanks for using Pardus and Apache! </p>
 
 <center><img src="apache_pb.gif" alt="Apache" /></center>
