--- a/server/web/nginx/files/default-page/index-tr.html
+++ b/server/web/nginx/files/default-page/index-tr.html
@@ -12,12 +12,12 @@
 </b><br>
 </center>
 
-<p>Bu sayfayı gördüğünüze göre <a href="http://www.pardus.org.tr">Pardus</a> üzerine <a
+<p>Bu sayfayı gördüğünüze göre <a href="http://www.pardus-anka.org">Pardus</a> üzerine <a
     href="http://www.nginx.net/"><b>Nginx Web Sunucusu</b></a>'nu başarılı bir şekilde kurdunuz demektir. Bu sayfanın bulunduğu dizine kendi sayfalarınızı ekleyip hemen yayımlamaya başlayabilirsiniz.</p>
 
 <hr width="80%" size="4" />
 
-<p><a href="http://www.pardus.org.tr">Pardus,</a> Nginx Web Sunucusu'nun güvenli bir şekilde çalışabileceği özgür bir Linux dağıtımıdır. <b>Nginx</b> Web Sunucusu'nu kullanırken aşağıdaki Nginx logosunu kullanabilirsiniz. Pardus ve Nginx'i kullandığınız için teşekkür ederiz!</p>
+<p><a href="http://www.pardus-anka.org">Pardus,</a> Nginx Web Sunucusu'nun güvenli bir şekilde çalışabileceği özgür bir Linux dağıtımıdır. <b>Nginx</b> Web Sunucusu'nu kullanırken aşağıdaki Nginx logosunu kullanabilirsiniz. Pardus ve Nginx'i kullandığınız için teşekkür ederiz!</p>
 
 <center><img src="nginx.gif" alt="Nginx" /></center>
 
